"""Annual report schedule entries (annex tracking)."""

from sqlalchemy import Boolean, Column, DateTime, ForeignKey, Integer, Text, UniqueConstraint
from sqlalchemy.orm import relationship
from app.utils.enum_utils import pg_enum

from app.database import Base
from app.annual_reports.models.annual_report_enums import AnnualReportSchedule
from app.utils.time_utils import utcnow


class AnnualReportScheduleEntry(Base):
    """
    Tracks required schedules for an annual report and their completion status.
    """

    __tablename__ = "annual_report_schedules"
    __table_args__ = (
        UniqueConstraint("annual_report_id", "schedule", name="uq_annual_report_schedules_report_schedule"),
    )

    id = Column(Integer, primary_key=True, autoincrement=True)
    annual_report_id = Column(Integer, ForeignKey("annual_reports.id", ondelete="CASCADE"), nullable=False, index=True)

    schedule = Column(pg_enum(AnnualReportSchedule, create_type=False), nullable=False)
    is_required = Column(Boolean, default=True, nullable=False)
    is_complete = Column(Boolean, default=False, nullable=False)
    notes = Column(Text, nullable=True)

    created_at = Column(DateTime, default=utcnow, nullable=False)
    completed_at = Column(DateTime, nullable=True)
    completed_by = Column(Integer, ForeignKey("users.id"), nullable=True)
    annual_report = relationship("AnnualReport", back_populates="schedule_entries")
    annex_lines = relationship(
        "AnnualReportAnnexData",
        back_populates="schedule_entry",
        cascade="all, delete-orphan",
        lazy="select",
    )

__all__ = ["AnnualReportScheduleEntry"]
